<?xml version="1.0"?>
<package format="2">
  <name>servicebot_control</name>
  <version>0.0.0</version>
  <description>The servicebot_control package</description>

  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
