<?xml version="1.0"?>
<package format="2">
  <name>servicebot_control</name>
  <version>0.3.2</version>
  <description>The servicebot_control package</description>

  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>Apache Licence 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
