<?xml version="1.0"?>
<package format="2">
  <name>servicebot_description</name>
  <version>0.0.0</version>
  <description>The servicebot_description package</description>

  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>


  <license>Apache License 2.0</license>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
