<?xml version="1.0"?>

<package format="2">
  <name>servicesim</name>
  <version>0.0.0</version>
  <description>The servicesim package</description>

  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>Apache Licence 2.0</license>

  <exec_depend>servicebot_description</exec_depend>
  <exec_depend>servicesim_competition</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
