<?xml version="1.0"?>
<package format="2">
  <name>servicesim</name>
  <version>0.0.1</version>
  <description>The servicesim package</description>

  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>Apache Licence 2.0</license>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>servicebot_description</exec_depend>
  <exec_depend>servicesim_competition</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>rqt_ez_publisher</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
