<?xml version="1.0"?>
<package format="2">
  <name>servicesim_competition</name>
  <version>0.3.2</version>
  <description>The servicesim_competition package</description>

  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
