<?xml version="1.0"?>

<package format="2">
  <name>servicesim_test</name>
  <version>0.0.0</version>
  <description>The servicesim test package</description>

  <maintainer email="louise@osrfoundation.org">Louise Poubel</maintainer>

  <license>Apache Licence 2.0</license>

  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>servicebot_description</exec_depend>
  <exec_depend>servicesim_competition</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
