<?xml version="1.0"?>
<package format="2">
  <name>servicesim_test</name>
  <version>0.3.2</version>
  <description>The servicesim test package</description>

  <maintainer email="louise@osrfoundation.org">Louise Poubel</maintainer>

  <license>Apache Licence 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>gazebo</test_depend>
  <test_depend>gazebo_ros</test_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>servicesim_competition</test_depend>
  <test_depend>servicebot_description</test_depend>
  <test_depend>gazebo_msgs</test_depend>

  <export>
  </export>
</package>
