<?xml version="1.0"?>
<package format="2">
  <name>servicebot_2dnav</name>
  <version>0.3.2</version>
  <description>The servicebot_2dnav package</description>

  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

  <export>
  </export>
</package>
