<?xml version="1.0"?>
<package format="2">
  <name>servicesim_example_python_solution</name>
  <version>0.2.0</version>
  <description>The servicesim_example_python_solution package</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>


  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>servicesim_competition</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
