<?xml version="1.0"?>
<package format="2">
  <name>servicesim_example_python_solution</name>
  <version>0.3.2</version>
  <description>The servicesim_example_python_solution package</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>vision_msgs</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>servicebot_2dnav</exec_depend>
  <exec_depend>servicesim_competition</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
  </export>
</package>
