<?xml version="1.0"?>
<package>
  <name>rqt_pan_tilt</name>
  <version>0.0.0</version>
  <description>The rqt_pan_tilt package</description>
  <maintainer email="rohitsalem@gmail.com">Rohit Salem</maintainer>

  <license>Apache Licence 2.0</license>

  <author>Rohit Salem</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>servicesim_competition</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
