<?xml version="1.0"?>
<package format="2">
  <name>rqt_servicebot_pan_tilt</name>
  <version>0.3.2</version>
  <description>The rqt_servicebot_pan_tilt package</description>
  <maintainer email="rohitsalem@gmail.com">Rohit Salem</maintainer>

  <license>Apache Licence 2.0</license>

  <author>Rohit Salem</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
